[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/customfont25.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/customfontsmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/GameOverScreen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )

[node name="GameOverScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 964.0
margin_bottom = 540.0
custom_constants/separation = 150

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 924.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
text = "GAME OVER"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 252.0
margin_right = 924.0
margin_bottom = 462.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 323.0
margin_right = 601.0
margin_bottom = 210.0
custom_constants/separation = 27

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 278.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "     RESTART     "

[node name="MainMenuButton2" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 278.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 2 )
text = "     MAIN MENU     "

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 278.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 2 )
text = "QUIT"

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/MainMenuButton2" to="." method="_on_MainMenuButton2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
